==================

* Fix a race condition where it was possible for an data-unwrap to
  happen before the contents of an element was fully rendered with
  data-render. This caused the element to disappear without a trace, no
  data-render contents would appear.

  This case is hard to test for so no test was written; it appears to
  happen when templates are loaded from URLs for the first time.

1.0 (2013-05-19)
================

* Obviel 1.0 final! The code is identical to Obviel 1.0rc1.

1.0rc1 (2013-05-15)
===================

* Upgrade Obviel to work with jQuery 1.9.1. This didn't affect much  
  code except Obviel Template, which had a minor bug, and Obviel Forms.

  Obviel Forms had bigger problems as jquery-datalink breaks in modern
  versions of jQuery. To this end ``src/dependencies`` now contains a
  fixed version of ``jquery.datalink.js`` that you can use to make
  forms work again with a modern version of jQuery. On the longer term
  we're looking to replace jquery.datalink with a better system for
  data binding.

  We also noticed that the optional jquery.ba-bbq dependency for
  dealing with browser hashchanges was incompatible with jQuery
  1.9. Included is a fork of jquery.ba-bbq from
  https://github.com/joshlangner/jquery-bbq that fixes this
  incompatibility.

* Fix an occasional test failure due to ordering issues in the tests for
  Obviel Forms.

* Expose ``obviel.forms.defaultErrorAreaView`` so it can be
  re-registered with ``obviel.view`` during test cleanup (in case a
  test registered its own).

* Add an ``obviel.unregisterView`` function which can be used to
  remove existing view registrations.

* use '.on' to bind events instead of '.bind', in Obviel core and
  Obviel Template. This fixes at least one issue where 'keyup' events
  were not being handled with ``data-on`` on a textarea in FireFox,
  triggered by a user (the issue didn't exist with firing with trigger).

* Throw away some dependencies (datalink, qunit) that weren't in use